<resources>
    <string name="app_name">BookApp</string>
    <string name="connect_with_googlee">Connect With Google</string>
    <string name="by_clicking_i_agree_to_terms_and_service">By clicking, I agree to Terms and Service.</string>
    <string name="sign_in">Sign In To Countinue</string>
    <string name="email_address">Email Address</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register">Don\'t have account? SIGN UP</string>
    <string name="choose_language">Choose Language</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="failed_download_translation_model">Failed to download translation tools, please check your WIFI connection</string>
    <string name="welcome_to_ebooks">Welcome to eBooks</string>
    <string name="sign_in_card">Sign In</string>
    <string name="register">Register</string>
    <string name="enter_your_birthday_here">Birthday</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_regis">Welcome to Ebooks</string>
    <string name="signup_to_disc">Sign Up to Discover Books</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_birthday">Please enter your birthday</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="registered_successfully">Register Successfully</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_is_required">Email is required</string>
    <string name="provide_valid_email">Provide Valide Email</string>
    <string name="check_your_email_to_reset_password">Check your email to reset password</string>
    <string name="try_again">Try Again\n</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="you_havent_verify_your_account">You didn\'t verify your Account</string>
    <string name="cant_login">Error to Login</string>
    <string name="default_web_client_id">279279167069-8e3qugl5b67gelovkjmfq122l8eaptmm.apps.googleusercontent.com</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="setting">Setting</string>
    <string name="edit_personal_detail">Edit personal detail\n</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="history">History</string>
    <string name="other">Other</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="Favourite">Favourite Books</string>
    <string name="update">Update</string>
    <string name="birthday">Birthday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="my_category">My Category</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="my_order">My Orders</string>


</resources>