<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragment.EbooksSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        >
        <include layout="@layout/toolbar"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/contentBodyColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileCircleImageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="#88abb1"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/usernameTextView"
                        style="@style/viewParent.headerText"
                        android:text="Meow"
                        android:textStyle="bold"

                        android:textSize="18sp"
                        android:layout_toRightOf="@id/profileCircleImageView"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        style="@style/viewParent.headerText"
                        android:text="@string/edit_personal_detail"
                        android:textSize="16sp"
                        android:textColor="#5D5C5C"
                        android:layout_below="@id/usernameTextView"
                        android:layout_toRightOf="@id/profileCircleImageView"/>

                    <ImageView
                        style="@style/viewParent"
                        android:src="@drawable/ic_more"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <Switch
                    android:layout_marginTop="40dp"
                    android:id="@+id/darkModeSwitch"
                    style="@style/settingsText"
                    android:drawableLeft="@drawable/ic_dark_mode"
                    android:text="@string/dark_mode" />

                <TextView
                    style="@style/viewParent.headerText.settingsMiniTitle"
                    android:text="Profile"/>

                <TextView
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/ic_edit_profile"
                    android:id="@+id/edit_profile"
                    android:text="@string/edit_profile" />

                <TextView
                    android:id="@+id/cart"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/shopping"
                    android:text="@string/my_cart" />
                <TextView
                    android:id="@+id/bill"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/bill"
                    android:text="@string/my_order" />

                <TextView
                    android:id="@+id/favourite"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/favorite"
                    android:text="@string/Favourite" />



                <TextView
                    style="@style/viewParent.headerText.settingsMiniTitle"

                    android:text="@string/other"/>

                <TextView
                    android:id="@+id/language"
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/ic_languages"
                    android:text="@string/language" />

                <TextView
                    style="@style/viewParent.headerText.settingsTextIcon"
                    android:drawableLeft="@drawable/ic_logout"
                    android:id="@+id/logout"
                    android:text="@string/logout" />



            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <com.roughike.bottombar.BottomBar
        android:id="@+id/bottombar"

        android:layout_width="match_parent"
        android:layout_height="52.6dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white_tab"
        android:elevation="8dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom|end"
        android:layout_gravity="bottom"
        app:bb_activeTabColor="@color/white_tab"
        app:bb_badgesHideWhenActive="true"
        app:bb_inActiveTabColor="#a4ebfe"
        app:bb_showShadow="true"
        app:bb_tabXmlResource="@xml/bottombar_tabs"
        app:bb_titleTextAppearance="@style/botoombar_textchange"
        app:paddingStart="10dp" />


</RelativeLayout>
