<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignInEmailActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        android:padding="20dp">
        <ImageButton
            android:id="@+id/language_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/language_icon"
            android:background="#00000000"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginLeft="10dp"


            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </LinearLayout>
        <TextView
            android:fontFamily="@font/georgia_bold"
            android:layout_width="wrap_content"
            android:id="@+id/logoText"

            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:transitionName="logo_text"
            android:textColor="@color/brown"
            android:textSize="40sp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/email"
                    android:layout_height="wrap_content"
                    android:transitionName="uname"
                    android:textColorHint="#8E8B8B"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/password"
                    android:textColorHint="#8E8B8B"
                    android:inputType="numberPassword"
                    android:textColorHighlight="@color/black"
                    android:transitionName="pass_tran"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="200dp"
                android:id="@+id/forgotpassword"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/forget_password"
                android:fontFamily="@font/georgia"
                android:textColor="@color/black"
                android:layout_gravity="right"
                android:gravity="right"
                android:elevation="0dp"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#F3DEBA"
                android:fontFamily="@font/georgia_bold"
                android:text="@string/login"
                android:backgroundTint="#A9907E"
                android:transitionName="button_tran" />

        </LinearLayout>




    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/btnregis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"
        android:fontFamily="@font/roboto_regular"
        android:textSize="17dp"
        android:text="@string/don_t_have_account_register"
        android:textColor="@color/black"
        android:gravity="center"
        android:transitionName="login2signup" />
</RelativeLayout>