<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    tools:context=".Activities.LoginScreen">
<!--    <TextView-->
<!--        android:id="@+id/welcome_to_"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="26dp"-->
<!--        android:layout_marginStart="35dp"-->
<!--        android:layout_gravity="left"-->
<!--        android:textSize="10dp"-->
<!--        android:textStyle="bold"-->
<!--        android:text="Welcome to"-->
<!--        android:layout_marginTop="10dp"-->
<!--        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/logo"
        android:gravity="center"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/welcome_to_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingTop="10dp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:fontFamily="@font/georgia_bold"

                android:text="@string/welcome_to_ebooks"
                />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:background="@drawable/logo" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginLeft="26.3dp"
        android:layout_marginRight="26.3dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/logo"
        android:layout_above="@+id/logincard"
        app:cardCornerRadius="3dp">
        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:iss_corner_radius="11"
            app:iss_auto_cycle="true"
            app:iss_delay="2"
            app:iss_error_image="@drawable/ic_launcher_background"
            app:iss_period="1000"
            app:iss_placeholder="@drawable/ic_launcher_foreground"
            />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/logincard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginLeft="26.3dp"
        android:layout_marginRight="26.3dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/cardview"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:background="#A9907E"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:letterSpacing="0.0165"
                android:textColor="#F3DEBA"
                android:fontFamily="@font/georgia_bold"

                android:text="@string/sign_in_card"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginLeft="26.3dp"
        android:layout_marginRight="26.3dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/bottom_txt"
        app:cardCornerRadius="3dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:src="@drawable/img"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:letterSpacing="0.0165"
                android:textColor="#394556"
                android:fontFamily="@font/georgia_regular_font"

                android:text="@string/connect_with_googlee"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/bottom_txt"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#394556"

        android:text="@string/by_clicking_i_agree_to_terms_and_service"
        android:textSize="13.3sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15sp"
        android:gravity="center"/>

</RelativeLayout>